# caffeine-cosmic

./: Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml
resources/: app.desktop  app.metainfo.xml
src/: app.rs  backend.rs  i18n.rs  main.rs  service.rs  state.rs
