[package]
name = "cosmic-caffeine"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A COSMIC applet to prevent system sleep"
repository = "https://github.com/user/cosmic-caffeine"

[dependencies]
ashpd = { version = "0.12", default-features = false, features = ["tokio"] }
enumflags2 = "0.7"
futures-util = "0.3.31"
i18n-embed-fl = "0.10"
rust-embed = "8.7.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "winit",
]
